# custom-usctool

./: .gitignore  Cargo.toml  README.ja.md  README.md
.github/workflows/: build.yml
crates/cdylib/: Cargo.toml  build.rs
crates/cdylib/src/: lib.rs  strings.rs
crates/cli/: Cargo.toml
crates/cli/src/: common.rs  main.rs
crates/cli/src/commands/: convert.rs  detect.rs  migrate.rs  mod.rs
crates/lib/: Cargo.toml
crates/lib/src/: js_bridge.rs  lib.rs  result.rs  usc.rs
js/: .eslintrc.cjs  .swcrc  build.js  build.ts  jest.config.cjs  package.json  pnpm-lock.yaml  tsconfig.json
js/src/: index.ts
js/src/@types/@sinonjs/text-encoding/: index.d.ts
js/src/__tests__/: main.test.ts  test.ts
js/src/__tests__/__snapshots__/: main.test.ts.snap
js/src/__tests__/assets/: layered.ccmmws  skched.chs
js/src/chs/: convert.ts
js/src/chs/typing/: ched2.ts  ched3.ts  index.ts
js/src/mmws/: analyze.ts  binreader.ts  convert.ts
js/src/sus/: analyze.ts  convert.ts
js/src/usc/: index.ts
js/src/usc/migrate/: index.ts  v1tov2.ts
js/src/usc/types/: v1.ts  v2.ts
