[workspace]
members = ["crates/cdylib", "crates/cli", "crates/lib"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
usctool = { path = "./crates/lib" }

anyhow = "1.0.75"
base64 = "0.21.5"
cbindgen = "0.26.0"
clap = { version = "4.4.11", features = ["derive"] }
duplicate = "1.0.0"
once_cell = "1.19.0"
rstest = "0.18.2"
rquickjs = { git = "https://github.com/stevefan1999-personal/rquickjs.git", branch = "patch-qjs-patch-without-gnu", features = [
  "parallel",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.51"

