[package]
name = "usctool-cdylib"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
usctool.workspace = true

[build-dependencies]
cbindgen.workspace = true
