[package]
name = "usctool-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors = ["Nanashi. <@sevenc-nanashi>"]
description = "A tool for Universal Sekai Chart."

[[bin]]
name = "usctool"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.11", features = ["derive"] }
usctool.workspace = true
