[package]
name = "usctool-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors = ["Nanashi. <@sevenc-nanashi>"]
description = "A tool for Universal Sekai Chart."

[[bin]]
name = "usctool"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
usctool.workspace = true
