[package]
name = "usctool"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "usctool"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
duplicate = "1.0.0"
once_cell = "1.19.0"
rquickjs = { git = "https://github.com/stevefan1999-personal/rquickjs.git", branch = "patch-qjs-patch-without-gnu", features = ["parallel"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.51"

[dev-dependencies]
rstest = "0.18.2"
