[package]
name = "usctool"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "usctool"

[dependencies]
anyhow.workspace = true
base64.workspace = true
duplicate.workspace = true
once_cell.workspace = true
rquickjs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
